# hyperparameter_optimization

./: .cruft.json  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.txt  clustering_writeout.ipynb  clusterscanner.ipynb  codespell.txt  gpu.slurm  mypy.ini  pyproject.toml  readme.md  setup.cfg  simple_test_training.py  test_slurm.sh  test_training.py  truncate_files.ipynb  working_example.ipynb
.github/: dependabot.yml
config/: 55b0da30  55b0da30.json  a8461aeb.json  cb57b007_focal.json  cc1db2b3.json  config_00.json  config_01.json  config_02.json  config_03.json  config_04.json  config_05.json  config_06.json  config_07.json  config_08.json  config_09.json  config_10.json  config_11.json  config_12.json  config_13.json  config_14.json  config_15.json  config_16.json  config_17.json  config_18.json  config_19.json  config_20.json  config_21.json  config_22.json  config_23.json  config_24.json  config_25.json  config_26.json  config_27.json  config_28.json  config_29.json  config_30.json  config_31.json  config_32.json  config_33.json  config_34.json  (+65 more)
notebooks/: clustering_writeout.ipynb  clusterscanner.ipynb  evaluate_different_pt.ipynb  resume_training.ipynb  truncate_files.ipynb  working_example.ipynb
scripts/: build_graphs.py  build_point_clouds.py  dbscan_gpu.py  download_config.py  pbt.py  potential_loss_performance.py  reproduce_clustering_bug.py  simple_test_training.py  simply_train.py  test_training.py  tune.py  tune_01.py  tune_02.py  tune_02_perfect_ec.py  tune_02_perfect_ec_sectorized_truth_cut.py  tune_03.py  tune_ec.py  tune_gc.py  (+16 more)
(+51 files in other folders)
