[metadata]
name = gte
description = Hyper parameter scan dispatchers and exploratory notebooks for tracking with GNNs
url = https://github.com/klieret/gnn_tracking_experiments
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.7
project_urls =
    Bug Tracker =   https://github.com/klieret/gnn_tracking_experiments/issues
    Source Code =   https://github.com/klieret/gnn_tracking_experiments
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    colorlog
    optuna
    wandb
    ray[tune]
    pytimeparse
    click
    numpy
    wandb-osh

[options.extras_require]
testing =
    pytest
    pytest-coverage

[options.packages.find]
where=src
